; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-bgp.c_bgp_attr_get_as_size.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-bgp.c_bgp_attr_get_as_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BGPTYPE_AS4_PATH = common dso_local global i64 0, align 8
@BGP_AS_SEG_TYPE_MIN = common dso_local global i32 0, align 4
@BGP_AS_SEG_TYPE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*, i32)* @bgp_attr_get_as_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bgp_attr_get_as_size(i32* %0, i64 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %8, align 8
  store i32* %11, i32** %10, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @BGPTYPE_AS4_PATH, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i32 4, i32* %5, align 4
  br label %64

16:                                               ; preds = %4
  br label %17

17:                                               ; preds = %41, %16
  %18 = load i32*, i32** %10, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = icmp ult i32* %18, %22
  br i1 %23, label %24, label %54

24:                                               ; preds = %17
  %25 = load i32*, i32** %10, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @ND_TCHECK(i32 %27)
  %29 = load i32*, i32** %10, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @BGP_AS_SEG_TYPE_MIN, align 4
  %33 = icmp slt i32 %31, %32
  br i1 %33, label %40, label %34

34:                                               ; preds = %24
  %35 = load i32*, i32** %10, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @BGP_AS_SEG_TYPE_MAX, align 4
  %39 = icmp sgt i32 %37, %38
  br i1 %39, label %40, label %41

40:                                               ; preds = %34, %24
  br label %63

41:                                               ; preds = %34
  %42 = load i32*, i32** %10, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 1
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @ND_TCHECK(i32 %44)
  %46 = load i32*, i32** %10, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 1
  %48 = load i32, i32* %47, align 4
  %49 = mul nsw i32 %48, 2
  %50 = add nsw i32 2, %49
  %51 = load i32*, i32** %10, align 8
  %52 = sext i32 %50 to i64
  %53 = getelementptr inbounds i32, i32* %51, i64 %52
  store i32* %53, i32** %10, align 8
  br label %17

54:                                               ; preds = %17
  %55 = load i32*, i32** %10, align 8
  %56 = load i32*, i32** %8, align 8
  %57 = load i32, i32* %9, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i32, i32* %56, i64 %58
  %60 = icmp eq i32* %55, %59
  br i1 %60, label %61, label %62

61:                                               ; preds = %54
  store i32 2, i32* %5, align 4
  br label %64

62:                                               ; preds = %54
  br label %63

63:                                               ; preds = %62, %40
  store i32 4, i32* %5, align 4
  br label %64

64:                                               ; preds = %63, %61, %15
  %65 = load i32, i32* %5, align 4
  ret i32 %65
}

declare dso_local i32 @ND_TCHECK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
